src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --background: #ffffff;
  --foreground: #171717;
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #efefef;
  }
}

body {
  color: var(--foreground);
  background: var(--background);
  font-family: Arial, Helvetica, sans-serif;
}

@layer base {
  :root {
      --background: 0 0% 100%;
      --foreground: 222.2 84% 4.9%;
      --card: 0 0% 100%;
      --card-foreground: 222.2 84% 4.9%;
      --popover: 0 0% 100%;
      --popover-foreground: 222.2 84% 4.9%;
      --primary: 224.08deg 60% 48.04%;
      --primary-foreground: 272.24deg 41.61% 68.43%;
      --secondary: 210 40% 96.1%;
      --secondary-foreground: 222.2 47.4% 11.2%;
      --muted: 210 40% 96.1%;
      --muted-foreground: 215.4 16.3% 46.9%;
      --accent: 210 40% 96.1%;
      --accent-foreground: 222.2 47.4% 11.2%;
      --destructive: 0 84.2% 60.2%;
      --destructive-foreground: 210 40% 98%;
      --border: 220 13% 91%;
      --input: 220 13% 91%;
      --ring: 222.2 84% 4.9%;
      --radius: 0.5rem;
    }
    
  }
  .dark {
    --background: 222.2 84% 4.9%;
    --foreground: 210 40% 98%;
    --card: 222.2 84% 4.9%;
    --card-foreground: 210 40% 98%;
    --popover: 222.2 84% 4.9%;
    --popover-foreground: 210 40% 98%;
    --primary: 210 40% 98%;
    --primary-foreground: 222.2 47.4% 11.2%;
    --secondary: 217.2 32.6% 17.5%;
    --secondary-foreground: 210 40% 98%;
    --muted: 217.2 32.6% 17.5%;
    --muted-foreground: 215 20.2% 65.1%;
    --accent: 217.2 32.6% 17.5%;
    --accent-foreground: 210 40% 98%;
    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 210 40% 98%;
    --border: 217.2 32.6% 17.5%;
    --input: 217.2 32.6% 17.5%;
    --ring: 212.7 26.8% 83.9%;
  }


@layer base {
  * {
    @apply border-border;
  }
  body {
    @apply bg-background text-foreground;
  }
}


@keyframes gradient-spin {
  0% {
    background-position: 0% 50%;
  }
  50% {
    background-position: 100% 50%;
  }
  100% {
    background-position: 0% 50%;
  }
}

.animate-gradient-spin {
  background: linear-gradient(90deg, #ec4899, #a855f7, #3b82f6, #ec4899);
  background-size: 300% 300%;
  animation: gradient-spin 3s linear infinite;
}




.hide-scrollbar {
  overflow: hidden;
}

/* For WebKit (Chrome, Safari) */
.hide-scrollbar::-webkit-scrollbar {
  width: 3px;
  cursor: pointer;
}

.hide-scrollbar::-webkit-scrollbar-thumb {
  background-color: blue;
  border-radius: 3px;
}

.hide-scrollbar:hover {
  overflow-y: scroll;
}

.hide-scrollbar:hover::-webkit-scrollbar-thumb {
  background-color: red;
}

/* For Firefox */
.hide-scrollbar {
  scrollbar-width: thin;
}

.hide-scrollbar:hover {
  overflow-y: scroll;
}

.hide-scrollbar:hover::-webkit-scrollbar-thumb {
  background-color: red;
  border-radius: 20px;
}

